Fixing header padding so it won't take too much room

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,5 +3,5 @@
     margin: 10px;
 }
 #sorting-form-section{
-    padding: 3%;
+    padding: 30px;
 }
